--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <div class="card">
             <div class="img">
-                <img src="C:\Users\shyam\OneDrive\Documents\sunny . documents\Shavignesh.jpg" alt="300">
+                <img src="Shavignesh.jpg" alt="300">
             </div>
             <h1>Shavignesh</h1>
             <span>I'm Shavignesh,  A passoinate<br>Web Developer</span>
